--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>11 Mar. 2012</b>
 - "Harry Goatleaf" is site 2 now.
+- "Urgency" now has the activated ability to discard itself to add +1 strength. 
 
 <b>10 Mar. 2012</b>
 - "Asfaloth" no longer discard itself when attached to Ally and fellowship is at an Underground site.
