- "Faramir, Bearer of Quality" now correctly gives the roaming keyword to a minion skirmishing GONDOR Man.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,7 +1,8 @@
 <pre style="font-size:80%">
 <b>11 Mar. 2012</b>
 - "Harry Goatleaf" is site 2 now.
-- "Urgency" now has the activated ability to discard itself to add +1 strength. 
+- "Urgency" now has the activated ability to discard itself to add +1 strength.
+- "Faramir, Bearer of Quality" now correctly gives the roaming keyword to a minion skirmishing GONDOR Man.
 
 <b>10 Mar. 2012</b>
 - "Asfaloth" no longer discard itself when attached to Ally and fellowship is at an Underground site.
