- "Dark Fell About Him" now correctly exerts your Nazgul twice.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>12 Mar. 2012</b>
+- "Dark Fell About Him" now correctly exerts your Nazgul twice.
+
 <b>11 Mar. 2012</b>
 - "Harry Goatleaf" is site 2 now.
 - "Urgency" now has the activated ability to discard itself to add +1 strength.
