--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>14 Mar. 2012</b>
+- "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
+
 <b>12 Mar. 2012</b>
 - "Dark Fell About Him" now correctly exerts your Nazgul twice.
 
