--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,8 @@
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
 - "Into the Caves" now can be used only when card is in play.
+- If a minion assigned by normal FP assignments becomes unassigned before Shadow player(s) assigns minions, that minion
+no longer can be assigned by the Shadow player, as it's not a "leftover unassigned minion".
 
 <b>12 Mar. 2012</b>
 - "Dark Fell About Him" now correctly exerts your Nazgul twice.
