- "Rabbit Stew" and all similar cards from the set (transferring when something wins skirmish) should no longer freeze the game.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,8 @@
 - "Into the Caves" now can be used only when card is in play.
 - If a minion assigned by normal FP assignments becomes unassigned before Shadow player(s) assigns minions, that minion
 no longer can be assigned by the Shadow player, as it's not a "leftover unassigned minion".
+- "Rabbit Stew" and all similar cards from the set (transferring when something wins skirmish) should no longer freeze
+the game.
 
 <b>12 Mar. 2012</b>
 - "Dark Fell About Him" now correctly exerts your Nazgul twice.
