--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>15 Mar. 2012</b>
 - "Mount Doom" should finally work.
+- In card info box in game you will see site owner.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
