- You are able to browse your Adventure Deck now during game.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>15 Mar. 2012</b>
 - "Mount Doom" should finally work.
 - In card info box in game you will see site owner.
+- You are able to browse your Adventure Deck now during game.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
