--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,8 @@
 - "Mount Doom" should finally work.
 - In card info box in game you will see site owner.
 - You are able to browse your Adventure Deck now during game.
+- Selection action to use and selecting card (for example for assignments or another effect) have different card frame
+color now.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
