--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,7 @@
 - You are able to browse your Adventure Deck now during game.
 - Selection action to use and selecting card (for example for assignments or another effect) have different card frame
 color now.
+- Added collector's information sorting, also added checkbox for hiding merchant buttons on Merchant screen.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
