--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -6,6 +6,7 @@
 - Selection action to use and selecting card (for example for assignments or another effect) have different card frame
 color now.
 - Added collector's information sorting, also added checkbox for hiding merchant buttons on Merchant screen.
+- Deck upon loading now will be sorted.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
