--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ color now.
 - Added collector's information sorting, also added checkbox for hiding merchant buttons on Merchant screen.
 - Deck upon loading now will be sorted, sites by site number and shadow number, cards in deck by card type, culture
 and name.
+- Trading for foil now also requires a payment of 4G.
 
 <b>14 Mar. 2012</b>
 - "White Hand Destroyer" no longer has "Hunter 0" when you control no sites.
