--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>16 Mar. 2012</b>
+- When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
+
 <b>15 Mar. 2012</b>
 - "Mount Doom" should finally work.
 - In card info box in game you will see site owner.
