--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
+- "Gimli, Feared Axeman" should now properly be usable when a card is discarded by an action of an opponent.
 
 <b>15 Mar. 2012</b>
 - "Mount Doom" should finally work.
