--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
 - "Gimli, Feared Axeman" should now properly be usable when a card is discarded by an action of an opponent.
+- Added Reflections (09) boosters.
 
 <b>15 Mar. 2012</b>
 - "Mount Doom" should finally work.
