--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Mar. 2012</b>
+- "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
+
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
 - "Gimli, Feared Axeman" should now properly be usable when a card is discarded by an action of an opponent.
