--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>26 Mar. 2012</b>
 - "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
+- "Let Her Deal With Them" now correctly requires to spot Gollum or Smeagol to be able to play it (both from hand
+and discard).
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
