--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,8 @@
 - "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
 - "Let Her Deal With Them" now correctly requires to spot Gollum or Smeagol to be able to play it (both from hand
 and discard).
+- "Unreasonable Choice" now first makes the player choose the condition to discard, then the other player can decide
+if he/she wants to prevent it.
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
