- "Morgul Regiment" now allows to exert the same companion multiple times.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,7 @@
 and discard).
 - "Unreasonable Choice" now first makes the player choose the condition to discard, then the other player can decide
 if he/she wants to prevent it.
+- "Morgul Regiment" now allows to exert the same companion multiple times.
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
