--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -6,6 +6,7 @@ and discard).
 - "Unreasonable Choice" now first makes the player choose the condition to discard, then the other player can decide
 if he/she wants to prevent it.
 - "Morgul Regiment" now allows to exert the same companion multiple times.
+- "Parapet" activated ability now requires to spot 2 ROHAN Man, rather than just 1.
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
