--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@ if he/she wants to prevent it.
 - "Morgul Regiment" now allows to exert the same companion multiple times.
 - "Parapet" activated ability now requires to spot 2 ROHAN Man, rather than just 1.
 - "Bill Ferny" and other minions not assignable by FP player now should be assignable by Shadow player correctly.
+- "Jarnsmid" reducing twilight now affects only your cards.
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
