- "Isengard Shaman" now activates only if there is at least 2 twilight in the pool.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -9,6 +9,7 @@ if he/she wants to prevent it.
 - "Parapet" activated ability now requires to spot 2 ROHAN Man, rather than just 1.
 - "Bill Ferny" and other minions not assignable by FP player now should be assignable by Shadow player correctly.
 - "Jarnsmid" reducing twilight now affects only your cards.
+- "Isengard Shaman" now activates only if there is at least 2 twilight in the pool.
 
 <b>16 Mar. 2012</b>
 - When "Mountain-troll" is played with discarding 5 minions, now it should properly gain Fierce.
