- Roaming penalty is separate from twilight cost modifiers and applies after them.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>27 Mar. 2012</b>
+- Roaming penalty is separate from twilight cost modifiers and applies after them.
+
 <b>26 Mar. 2012</b>
 - "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
 - "Let Her Deal With Them" now correctly requires to spot Gollum or Smeagol to be able to play it (both from hand
