--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>27 Mar. 2012</b>
 - Roaming penalty is separate from twilight cost modifiers and applies after them.
+- "Uruviel" no longer affects assignments when copying "Caras Galadhon". 
 
 <b>26 Mar. 2012</b>
 - "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
