- "Galadriel, Lady of the Golden Wood" should play the next site correctly now in non-numbered formats.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,7 +1,10 @@
 <pre style="font-size:80%">
+<b>28 Mar. 2012</b>
+- "Galadriel, Lady of the Golden Wood" should play the next site correctly now in non-numbered formats.
+
 <b>27 Mar. 2012</b>
 - Roaming penalty is separate from twilight cost modifiers and applies after them.
-- "Uruviel" no longer affects assignments when copying "Caras Galadhon". 
+- "Uruviel" no longer affects assignments when copying "Caras Galadhon".
 
 <b>26 Mar. 2012</b>
 - "Pillage of Rohan" and other similar cards should be active at the right time now (only on your turn).
