--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>30 Mar. 2012</b>
 - "What Are We Waiting For?" should now skip only one Shadow phase, if player moves more than once.
+- "Final Triumph" should now correctly allow the skirmish to resolve based on Vitality.
 
 <b>28 Mar. 2012</b>
 - "Galadriel, Lady of the Golden Wood" should play the next site correctly now in non-numbered formats.
