--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "What Are We Waiting For?" should now skip only one Shadow phase, if player moves more than once.
 - "Final Triumph" should now correctly allow the skirmish to resolve based on Vitality.
 - "Host of Udun" should now work correctly.
+- "Grima's Dagger" is now a possession, rather than condition.
 
 <b>28 Mar. 2012</b>
 - "Galadriel, Lady of the Golden Wood" should play the next site correctly now in non-numbered formats.
