--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - "Final Triumph" should now correctly allow the skirmish to resolve based on Vitality.
 - "Host of Udun" should now work correctly.
 - "Grima's Dagger" is now a possession, rather than condition.
+- "Deep in Thought" is now a Spell.
 
 <b>28 Mar. 2012</b>
 - "Galadriel, Lady of the Golden Wood" should play the next site correctly now in non-numbered formats.
