--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
@@ -46,7 +46,9 @@
     <li>
         Deck building:
         <ol type="a">
-            <li>Each player builds a deck from the virtual product he/she owns.</li>
+            <li>Each player builds a deck from the collection used in the league serie, this can either be a pool of
+                cards given in the league, cards owned by player or all the cards in existance.
+            </li>
             <li>Deck in a <b style="color:#009f9f">League</b> can be changed at any time. When you create or join a
                 table with a deck, that
                 deck is set at that point and any changes done to the deck afterwards, will not be reflected in the game
@@ -56,9 +58,8 @@
             <li>(SEALED) In case of Sealed format, only virtual product owned within that League can be used to build a
                 deck.
             </li>
-            <li>(SEALED) Virtual cards given out as prizes for that <b style="color:#009f9f">League</b> are LEGAL for
-                playing in
-                the <b style="color:#009f9f">League</b>.
+            <li>(SEALED) Virtual cards given out as prizes for that <b style="color:#009f9f">League</b> are NOT LEGAL
+                for playing in the <b style="color:#009f9f">League</b>.
             </li>
             <li>(SEALED) <b style="color:#009f9f">League</b> has X and R list of the format it is run in.</li>
             <li>(SEALED) All the other rules of deck building - minimum 60 cards deck, even FP/Shadow cards split, etc.
@@ -69,41 +70,25 @@
     <li>Earning points:
         <ol type="a">
             <li>Each <b style="color:#009f9f">League serie</b>, every <b style="color:#009f9f">League</b> participant
-                can play a
-                maximum of fixed (announced with each serie, usually the same for whole League) rated games.
-            </li>
-            <li>In addition to rated games, player can choose to play any number of non-rated games with other
-                <b style="color:#009f9f">League</b> players.
-            </li>
-            <li>Only first game played against the same opponent in the same <b style="color:#009f9f">League serie</b>
-                can be rated. Any subsequent games
-                against the same opponent in the same <b style="color:#009f9f">League serie</b> will be treated as
-                non-rated.
+                can play a maximum of fixed (announced with each serie, usually the same for whole League) rated games.
             </li>
             <li>Winner of each rated game in a <b style="color:#009f9f">League</b> gains 2 <b style="color:#009f9f">League
-                serie</b> points. Rated game loser
-                gains 1 <b style="color:#009f9f">League serie</b> points.
+                serie</b> points. Rated game loser gains 1 <b style="color:#009f9f">League serie</b> points.
             </li>
         </ol>
     </li>
     <li>Prizes:
         <ol type="a">
             <li>Prizes in a league are virtual items only. These could be anything - promo/foil cards, foil options
-                (ability to change 1 non-foil card in your collection into a foil version of the same card), preview
-                cards from next expansions, etc.
+                (ability to change 1 non-foil card in your collection into a foil version of the same card), etc.
             </li>
-            <li>At the end of each <b style="color:#009f9f">League serie</b>, points for that serie are totalled and
-                prizes are given to
-                participants based on the total points gathered in this <b style="color:#009f9f">League serie</b>.
-            </li>
-            <li>After all the series end within a <b style="color:#009f9f">League</b>, in addition to prizes for the
-                last serie, players are
+            <li>After each game in a league. Winner is given a small prize for winning.</li>
+            <li>After all the series end within a <b style="color:#009f9f">League</b>, players are
                 given (substiantially bigger) prizes based on the total of points in all series in this <b
                         style="color:#009f9f">League</b>.
             </li>
-            <li>(SEALED) After the <b style="color:#009f9f">League</b> ends, all the cards players have in a League are
-                added to
-                a permanent collection of the player.
+            <li>(SEALED) After the <b style="color:#009f9f">League</b> ends, all the cards used in the Sealed league
+                are lost and DO NOT become part of players' collections.
             </li>
         </ol>
     </li>
@@ -133,15 +118,13 @@
                 winning, based only on deck-building and play-skill.
             </li>
             <li><b>When will I get new boosters in a Sealed league?</b><br/>
-                New product in a Sealed league is given at the beginning of each Serie. At the moment this is not done
-                automatically (requires me to actually run something) so it
-                might be some time after each Serie starts or sometimes before a Serie starts, but each player receives
-                new product at the same time.
+                New product in a Sealed league is given at the beginning of each Serie. This is done automatically.
             </li>
-            <li><b>How do I join a Sealed league?</b><br/>
-                You don't have to do anything special. While there is a League active, in your deck builder you'll find
-                a drop-down to switch to Sealed league collection, just open
-                a League pack you are presented with (left-click) and build your league deck.
+            <li><b>How do I join a league?</b><br/>
+                You don't have to do anything special. Just build a deck legal in the league and join/create table.
+                In case of sealed league, you need to select the league collection in your deck builder
+                (showing "All cards" by default) to build the deck. To open the packs you see there, just left-click
+                them.
             </li>
         </ol>
     </li>
