- In deck builder, in list of decks there is an extra icon, to show the deck-list in a text format.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>31 Mar. 2012</b>
 - Added sub-titles to all cards.
+- In deck builder, in list of decks there is an extra icon, to show the deck-list in a text format.
 
 <b>30 Mar. 2012</b>
 - "What Are We Waiting For?" should now skip only one Shadow phase, if player moves more than once.
