- "Black Dart" now can be transferred.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>02 Apr. 2012</b>
+- "Black Dart" now can be transferred.
+
 <b>31 Mar. 2012</b>
 - Added sub-titles to all cards.
 - In deck builder, in list of decks there is an extra icon, to show the deck-list in a text format.
