--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>02 Apr. 2012</b>
 - "Black Dart" now can be transferred.
+- Added Standard format.
 
 <b>31 Mar. 2012</b>
 - Added sub-titles to all cards.
