- "Thin and Stretched" now adds burden only, when it's supposed to.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>05 Apr. 2012</b>
+- "Thin and Stretched" now adds burden only, when it's supposed to.
+
 <b>02 Apr. 2012</b>
 - "Black Dart" now can be transferred.
 - Added Standard format.
