- "Throne of Saruman" now correctly boosts conditions that become Wizard minions.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>09 Apr. 2012</b>
+- "Throne of Saruman" now correctly boosts conditions that become Wizard minions.
+
 <b>07 Apr. 2012</b>
 - "East Wall of Rohan" can be activated once only.
 
