--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>09 Apr. 2012</b>
 - "Throne of Saruman" now correctly boosts conditions that become Wizard minions.
+- "Saruman, Master of Foul Folk" now correctly allows to heal each ISENGARD Orc when fellowship moves.
 
 <b>07 Apr. 2012</b>
 - "East Wall of Rohan" can be activated once only.
