--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>10 Apr. 2012</b>
+- "Momentous Gathering" now can be played if you can spot only one Ent.
+
 <b>09 Apr. 2012</b>
 - "Throne of Saruman" now correctly boosts conditions that become Wizard minions.
 - "Saruman, Master of Foul Folk" now correctly allows to heal each ISENGARD Orc when fellowship moves.
