--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/gameHistory.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/gameHistory.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="js/gameHistoryUi.js"></script>
+<script type="text/javascript" src="js/gemp-001/gameHistoryUi.js"></script>
 <script type="text/javascript">
     $(document).ready(
             function () {
