- Chat in game can now be prevented from auto-scrolling using a button.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,10 @@
 <pre style="font-size:80%">
+<b>11 Apr. 2012</b>
+- Added sets 01-06 starters to merchant.
+- Merchant starting filter shows cards only.
+- System messages in Game Hall can now be hidden with a button.
+- Chat in game can now be prevented from auto-scrolling using a button.
+
 <b>10 Apr. 2012</b>
 - "Momentous Gathering" now can be played if you can spot only one Ent.
 
