--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/gameHistory.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/gameHistory.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(
             function () {
-                var ui = new GameHistoryUI("/gemp-lotr/server");
+                var ui = new GameHistoryUI("/gemp-lotr-server");
             });
 
 </script>
