Moving the files around.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueResults.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueResults.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     $(document).ready(
             function () {
-                var ui = new LeagueResultsUI("/gemp-lotr/server");
+                var ui = new LeagueResultsUI("/gemp-lotr-server");
             });
 
 </script>
