--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - Merchant starting filter shows cards only.
 - System messages in Game Hall can now be hidden with a button.
 - Chat in game can now be prevented from auto-scrolling using a button.
+- "Blade of Gondor, Sword of Boromir" now correctly replaces the hobbit with it's bearer in skirmish.
 
 <b>10 Apr. 2012</b>
 - "Momentous Gathering" now can be played if you can spot only one Ent.
