--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>17 Apr. 2012</b>
+- Changing the display of league definition to make it more clear.
+
 <b>11 Apr. 2012</b>
 - Added sets 01-06 starters to merchant.
 - Merchant starting filter shows cards only.
