- "Rope and Winch" now adds +2 Strength, instead of +1 for each extra card discarded.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>19 Apr. 2012</b>
+- "Rope and Winch" now adds +2 Strength, instead of +1 for each extra card discarded.
+
 <b>17 Apr. 2012</b>
 - Changing the display of league definition to make it more clear.
 
