- Adding 0 threats is now possible and legal, hence playing "Plotting" will not fail now, if you can't add any threats anymore (number of threats is equal to or greater than number of companions).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>23 Apr. 2012</b>
+- Adding 0 threats is now possible and legal, hence playing "Plotting" will not fail now, if you can't add any threats
+anymore (number of threats is equal to or greater than number of companions).
+
 <b>19 Apr. 2012</b>
 - "Rope and Winch" now adds +2 Strength, instead of +1 for each extra card discarded.
 
