--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>24 Apr. 2012</b>
+- "Bill the Pony" no longer is discarded when moving to Underground site, before it decreases the shadow number of the
+site, when adding twilight for moving.
+
 <b>23 Apr. 2012</b>
 - Adding 0 threats is now possible and legal, hence playing "Plotting" will not fail now, if you can't add any threats
 anymore (number of threats is equal to or greater than number of companions).
