- "Doors of Durin" should be working correctly now with Smeagol (companion with no race).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Apr. 2012</b>
+- "Doors of Durin" should be working correctly now with Smeagol (companion with no race).
+
 <b>25 Apr. 2012</b>
 - "Unexpected Visitor" now also discards a minion in addition to removing twilight from twilight pool.
 
