- "Morning Came" now correctly adds +2 Strength to the character if shadow player puts card from hand beneath his/her draw deck.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>27 Apr. 2012</b>
+- "Morning Came" now correctly adds +2 Strength to the character if shadow player puts card from hand beneath his/her
+draw deck.
+
 <b>26 Apr. 2012</b>
 - "Doors of Durin" should be working correctly now with Smeagol (companion with no race).
 
