- Game no longer freezes sometimes, when a minion is removed from skirmish, before it resolves.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - "Realm of Dwarrowdelf" now has two separate limits (for str and dmg).
 - "Caras Galadhon" should no longer work badly in case of some assignment actions (Orc Assassin).
 - "Argument Ready to Hand" now asks the Shadow player to choose a race, rather than FP player.
+- Game no longer freezes sometimes, when a minion is removed from skirmish, before it resolves. 
 
 <b>27 Apr. 2012</b>
 - "Morning Came" now correctly adds +2 Strength to the character if shadow player puts card from hand beneath his/her
