- "Wrath of Harad" should now no longer freeze the game.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>09 May 2012</b>
+- "Wrath of Harad" should now no longer freeze the game.
+
 <b>30 Apr. 2012</b>
 - "Pillage of Rohan" should now work correctly.
 - "Realm of Dwarrowdelf" now has two separate limits (for str and dmg).
