- "Isengard Ruined" should now correctly allow to exert companion twice. - "Ulaire Otsea, Ringwraith in Twilight" and "Morgul Blade" no longer allow to attach Blade Tip to a character that already carries one. - "Assault Commander" now gives -1 resistance, rather than +1. - "Shingle in a Storm" now correctly discards itself upon use.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,11 @@
 <pre style="font-size:80%">
+<b>13 May 2012</b>
+- "Isengard Ruined" should now correctly allow to exert companion twice.
+- "Ulaire Otsea, Ringwraith in Twilight" and "Morgul Blade" no longer allow to attach Blade Tip to a character that
+already carries one.
+- "Assault Commander" now gives -1 resistance, rather than +1.
+- "Shingle in a Storm" now correctly discards itself upon use.
+
 <b>09 May 2012</b>
 - "Wrath of Harad" should now no longer freeze the game.
 
