- "The Mirror of Galadriel, Dangerous Guide" should no longer freeze the game, if top 3 cards are shadow only.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>14 May 2012</b>
 - "City of Men" should now correctly discard a minion at the end of the skirmish.
 - "Extraordinary Resilience" should now work correctly.
+- "The Mirror of Galadriel, Dangerous Guide" should no longer freeze the game, if top 3 cards are shadow only.
 
 <b>13 May 2012</b>
 - "Isengard Ruined" should now correctly allow to exert companion twice.
