- "New Strength Came Now" now allows to add Strength only to a RAIDER Man.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>23 May 2012</b>
 - "Merry, Noble Warrior" now adds +2 Strength for each ROHAN companion, instead of just +1.
+- "New Strength Came Now" now allows to add Strength only to a RAIDER Man.
 
 <b>22 May 2012</b>
 - "A Dragon's Tale" now makes shadow player exert one of his/her minions.
