- If a game is cancelled due to an error or players agreeing to cancel it, it is treated as finished, and players can start a new game.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>25 May 2012</b>
+- If a game is cancelled due to an error or players agreeing to cancel it, it is treated as finished, and players can
+start a new game.
+
 <b>24 May 2012</b>
 - "Úlairë Otsëa, Black-Mantled Wraith" now gives the option of choice to the FP player, rather than Shadow player.
 - Added King's block starters to merchant.
