- "Pippin, Friend to Frodo" now prevents only Shadow player from discarding Tales, not the FP player, if a Shadow card makes FP player to discard it.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>30 May 2012</b>
+- "Pippin, Friend to Frodo" now prevents only Shadow player from discarding Tales, not the FP player, if a Shadow card
+makes FP player to discard it.
+
 <b>25 May 2012</b>
 - If a game is cancelled due to an error or players agreeing to cancel it, it is treated as finished, and players can
 start a new game.
