- Cards that remove culture tokens like "Throne of Minas Tirith", now allow to remove the tokens from multiple cards.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - The drop-downs for deck and format in Game Hall no longer reset periodically.
 - The formats for each week in League tab are now clickable to show the details for the format.
 - Attached cards which have cars attached (like in case of "Whisper in the Dark") now should be displayed proparly.
+- Cards that remove culture tokens like "Throne of Minas Tirith", now allow to remove the tokens from multiple cards.
 
 <b>30 May 2012</b>
 - "Pippin, Friend to Frodo" now prevents only Shadow player from discarding Tales, not the FP player, if a Shadow card
