- "Host of Udun" now correctly reduces the cost if threats are removed, when card could be played for full cost.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>5 Jun. 2012</b>
+- "Host of Udun" now correctly reduces the cost if threats are removed, when card could be played for full cost.
+
 <b>4 Jun. 2012</b>
 - Reworked "Orkish Sneak".
 
