- If player is given an option of assigning, if no assignments is made, a popup confirmation window will show to ask if that was the intended operation.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>5 Jun. 2012</b>
 - "Host of Udun" now correctly reduces the cost if threats are removed, when card could be played for full cost.
+- If player is given an option of assigning, if no assignments is made, a popup confirmation window will show to ask if
+that was the intended operation.
 
 <b>4 Jun. 2012</b>
 - Reworked "Orkish Sneak".
