- "Final Account" now requires to exert a GANDALF Wizard to play it.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>6 Jun. 2012</b>
+- "Final Account" now requires to exert a GANDALF Wizard to play it.
+
 <b>5 Jun. 2012</b>
 - "Host of Udun" now correctly reduces the cost if threats are removed, when card could be played for full cost.
 - If player is given an option of assigning, if no assignments is made, a popup confirmation window will show to ask if
