- "Perspective" now correctly adds threats.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>6 Jun. 2012</b>
 - "Final Account" now requires to exert a GANDALF Wizard to play it.
+- "Perspective" now correctly adds threats.
 
 <b>5 Jun. 2012</b>
 - "Host of Udun" now correctly reduces the cost if threats are removed, when card could be played for full cost.
